--- a/kubernetes-intro/pod.yaml
+++ b/kubernetes-intro/pod.yaml
@@ -13,7 +13,7 @@ spec:
     lifecycle:
       preStop:
         exec: 
-          command: ["/bin/sh", "rm /common-volume/index.html"]
+          command: ["/bin/sh", "-c", "rm /common-volume/index.html"]
     ports:
     - name: http
       containerPort: 8000
